--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rollbar/react": "^0.12.0-beta",
+    "dotenv": "^16.4.5",
+    "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.0"
+    "rollbar": "^2.26.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@zeit/next-source-maps": "^0.0.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.0"
+    "eslint-config-next": "14.2.0",
+    "postcss": "^8",
+    "rollbar-sourcemap-webpack-plugin": "^3.3.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
