--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8",
     "rollbar-sourcemap-webpack-plugin": "^3.3.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-delete-sourcemaps-plugin": "^1.3.1"
   }
 }
